test/functions/bradc/staticMethods/callStaticFromInstance.chpl
proc type int.foo() {
  writeln("In static method foo()");
}

int.foo();
42.foo();
